--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoodSwinger</title>
-     <style>
+    <style>
         /* Body style */
         body {
             font-family: Arial, sans-serif;
@@ -69,13 +69,38 @@
             <option value="playlist5">Playlist 5</option>
         </select>
         <br><br>
-        <a href="#" onclick="loginWithSpotify()" class="spotify-login-btn">Login with Spotify</a>
+        <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=code&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     </div>
 
     <script>
-        function loginWithSpotify() {
-            // Redirect to Spotify login with the redirect URI including the access token parameter
-            window.location.href = "https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true";
+        // Function to enable the dropdown
+        function enableDropdown() {
+            var dropdown = document.getElementById("dropdown");
+            dropdown.disabled = false;
+        }
+
+        // Check if the URL contains an access token
+        window.addEventListener("load", function() {
+            var accessToken = getAccessTokenFromURL();
+            if (accessToken) {
+                // If access token is present, redirect to the second page
+                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";;
+            }
+        });
+
+        // Function to extract access token from URL
+        function getAccessTokenFromURL() {
+            var accessToken = null;
+            var hash = window.location.hash.substring(1);
+            var params = hash.split('&');
+            for (var i = 0; i < params.length; i++) {
+                var param = params[i].split('=');
+                if (param[0] === 'access_token') {
+                    accessToken = param[1];
+                    break;
+                }
+            }
+            return accessToken;
         }
     </script>
 </body>
