--- a/second_page.html
+++ b/second_page.html
@@ -25,12 +25,27 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Search container */
-.search-container {
+/* Image container */
+.image-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  gap: 20px;
   margin-bottom: 20px;
+}
+
+/* Mood image style */
+.mood-image {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  transition: transform 0.3s, border-color 0.3s;
+}
+
+.mood-image:hover {
+  transform: scale(1.1);
+  border-color: #1db954;
 }
 
 /* Track details container */
@@ -65,32 +80,6 @@ iframe {
   border: none;
   border-radius: 8px;
   margin-bottom: 20px;
-}
-
-/* Select dropdown style */
-#moods {
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  width: 250px;
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-/* Search button style */
-button {
-  padding: 10px 20px;
-  background-color: #1db954;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #1ed760;
 }
 
 /* Results container style */
@@ -179,15 +168,12 @@ button:hover {
 
 <h1>Spotify API Mood Search</h1>
 
-<div class="search-container">
-  <select id="moods">
-    <option value="0">Select a mood...</option>
-    <option value="chill">Chill</option>
-    <option value="sad">Sad</option>
-    <option value="happy">Happy</option>
-  </select>
-
-  <button onclick="searchSongs()">Search</button>
+<div class="image-container">
+  <img src="happy.png" alt="Happy" class="mood-image" onclick="searchSongs('happy')">
+  <img src="sad.png" alt="Sad" class="mood-image" onclick="searchSongs('sad')">
+  <img src="disgust.png" alt="Disgust" class="mood-image" onclick="searchSongs('disgust')">
+  <img src="fear.png" alt="Fear" class="mood-image" onclick="searchSongs('fear')">
+  <img src="anger.png" alt="Anger" class="mood-image" onclick="searchSongs('anger')">
 </div>
 
 <div id="results-container">
@@ -209,20 +195,13 @@ $(document).ready(function() {
   const selectedMood = sessionStorage.getItem('selectedMood');
 
   if (storedResults && selectedMood) {
-    $('#moods').val(selectedMood);
     $('#results').html(storedResults);
   }
 });
 
-function searchSongs() {
-  var selectedMood = $("#moods").val();
-  if (selectedMood == "0") {
-    alert("Please select a mood.");
-    return;
-  }
-
+function searchSongs(mood) {
   // Store selected mood in sessionStorage
-  sessionStorage.setItem('selectedMood', selectedMood);
+  sessionStorage.setItem('selectedMood', mood);
 
   // Client ID and Client Secret
   var clientId = "a80fcf0c3aae4aabb6f6b6721183b72e";
@@ -240,7 +219,7 @@ function searchSongs() {
     },
     success: function(response) {
       var accessToken = response.access_token;
-      searchRecommendedTracks(selectedMood, accessToken);
+      searchRecommendedTracks(mood, accessToken);
     },
     error: function(xhr, status, error) {
       console.log(error);
@@ -307,7 +286,6 @@ function saveTrackDetails(trackId, trackName, artistName, releaseYear) {
   sessionStorage.setItem('releaseYear', releaseYear);
 }
 </script>
-
 
 </body>
 </html>
