--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
             color: #666;
         }
 
-        /* Select dropdown style */
-        #dropdown {
-            background-color: #f2f2f2;
-            padding: 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            width: 200px;
-            margin-bottom: 10px;
+        /* Mood images style */
+        .moods {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .mood {
+            filter: grayscale(100%);
+            pointer-events: none;
+            opacity: 0.5;
         }
 
         /* Login button style */
@@ -61,13 +65,13 @@
     <div class="container">
         <h2>Spotify Login</h2>
         <p>Select a playlist:</p>
-        <select id="dropdown" disabled>
-            <option value="playlist1">Select a mood...</option>
-            <option value="playlist2">Playlist 2</option>
-            <option value="playlist3">Playlist 3</option>
-            <option value="playlist4">Playlist 4</option>
-            <option value="playlist5">Playlist 5</option>
-        </select>
+        <div class="moods">
+            <img src="happy.png" alt="Happy" class="mood" width="100" height="100">
+            <img src="sad.png" alt="Sad" class="mood" width="100" height="100">
+            <img src="disgust.png" alt="Disgust" class="mood" width="100" height="100">
+            <img src="fear.png" alt="Fear" class="mood" width="100" height="100">
+            <img src="anger.png" alt="Anger" class="mood" width="100" height="100">
+        </div>
         <br><br>
         <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=code&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     </div>
@@ -84,7 +88,7 @@
             var accessToken = getAccessTokenFromURL();
             if (accessToken) {
                 // If access token is present, redirect to the second page
-                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";;
+                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";
             }
         });
 
