--- a/second_page.html
+++ b/second_page.html
@@ -205,7 +205,7 @@ function searchSongs(mood) {
     'happy': 'happy',
     'sad': 'sad',
     'disgust': 'alternative',
-    'fear': 'dark',
+    'fear': 'ambient',
     'anger': 'metal'
   };
 
