--- a/second_page.html
+++ b/second_page.html
@@ -81,7 +81,6 @@ function searchSongs(mood) {
   });
 }
 
-
 function searchRecommendedTracks(mood, accessToken) {
   // Use Spotify's recommendation API to get recommended tracks based on mood
   var apiUrl = "https://api.spotify.com/v1/recommendations?seed_genres=" + mood + "&limit=50";
@@ -99,6 +98,7 @@ function searchRecommendedTracks(mood, accessToken) {
     },
     success: function(response) {
       displayResults(response);
+      createPlaylist(response.tracks, accessToken);
     },
     error: function(xhr, status, error) {
       console.log(error);
@@ -132,6 +132,70 @@ function displayResults(data) {
 
   // Store search results in sessionStorage
   sessionStorage.setItem('searchResults', html);
+}
+
+function createPlaylist(tracks, accessToken) {
+  // Get user's Spotify user ID
+  $.ajax({
+    url: "https://api.spotify.com/v1/me",
+    type: "GET",
+    headers: {
+      "Authorization": "Bearer " + accessToken
+    },
+    success: function(response) {
+      var userId = response.id;
+      var playlistName = "Mood Playlist";
+      var isPublic = true;
+
+      // Prepare track URIs
+      var trackURIs = tracks.map(track => "spotify:track:" + track.id);
+
+      // Create playlist
+      $.ajax({
+        url: "https://api.spotify.com/v1/users/" + userId + "/playlists",
+        type: "POST",
+        headers: {
+          "Authorization": "Bearer " + accessToken,
+          "Content-Type": "application/json"
+        },
+        data: JSON.stringify({
+          "name": playlistName,
+          "public": isPublic
+        }),
+        success: function(playlistResponse) {
+          var playlistId = playlistResponse.id;
+          addTracksToPlaylist(playlistId, trackURIs, accessToken);
+        },
+        error: function(xhr, status, error) {
+          console.log(error);
+        }
+      });
+    },
+    error: function(xhr, status, error) {
+      console.log(error);
+    }
+  });
+}
+
+function addTracksToPlaylist(playlistId, trackURIs, accessToken) {
+  // Add tracks to the created playlist
+  $.ajax({
+    url: "https://api.spotify.com/v1/playlists/" + playlistId + "/tracks",
+    type: "POST",
+    headers: {
+      "Authorization": "Bearer " + accessToken,
+      "Content-Type": "application/json"
+    },
+    data: JSON.stringify({
+      "uris": trackURIs
+    }),
+    success: function(response) {
+      console.log("Tracks added to playlist successfully!");
+    },
+    error: function(xhr, status, error) {
+      console.log(error);
+    }
+  });
 }
 
 function saveTrackDetails(trackId, trackName, artistName, releaseYear) {
