--- a/index.html
+++ b/index.html
@@ -77,18 +77,12 @@
     </div>
 
     <script>
-        // Function to enable the dropdown
-        function enableDropdown() {
-            var dropdown = document.getElementById("dropdown");
-            dropdown.disabled = false;
-        }
-
         // Check if the URL contains an access token
         window.addEventListener("load", function() {
             var accessToken = getAccessTokenFromURL();
             if (accessToken) {
                 // If access token is present, redirect to the second page
-                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";
+                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html?access_token=" + accessToken;
             }
         });
 
